# fpsphere

./: .dockerignore  .gitignore  Makefile  PLAN.md  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .env  Cargo.toml  Dockerfile
backend/data/: world-repository.json
backend/src/: aoi.rs  datastore.rs  hshg.rs  main.rs  multiplayer.rs  protocol.rs
deploy/: Caddyfile.example
docs/: adr-0001-unified-world-instance-model.md  architecture.md  protocol.md  sprint-1-closeout.md  sprint-2-closeout.md  sprint-5-closeout.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: main.ts  style.css
frontend/src/ar/: FpsphereArApp.ts  FpsphereQrPrintApp.ts  markerPayload.ts  qrPose.ts
frontend/src/game/: AvatarEditorApp.ts  FpsController.ts  GameApp.ts  avatarRenderAdapter.ts  editorActionsController.ts  editorInteractionController.ts  editorKeyboardController.ts  gameplayHudPanel.ts  keybindings.ts  levelLifecycleController.ts  levelSelectPanel.ts  localPredictionReconciler.ts  multiplayerClient.ts  physics.ts  remoteAvatarLifecycle.ts  remoteAvatarRenderSystem.ts  subworldTemplates.ts  templateHudPanel.ts  templatePlacementPlayback.ts  (+6 more)
frontend/tests/: keybindings.test.ts  levelLifecycleController.test.ts  markerPayload.test.ts  multiplayerClientDelta.test.ts  physics.test.ts  remoteAvatarLifecycle.test.ts  subworldTemplates.test.ts  templatePlacementPlayback.test.ts  worldApi.test.ts  worldInstanceRefs.test.ts  worldInstanceTint.test.ts  worldRenderPipeline.test.ts  worldStore.test.ts
